# rudra-sdk

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  REVIEW.md  demo.py  design.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: prompt.md
docs/fixtures/: chapter_200.json  chapter_id_404.json  chapter_minas_200.json  chapters_200.json  character_quote_200.json  quote_random.json
lotr_sdk/: __init__.py  cache.py  client.py  exceptions.py  http.py
lotr_sdk/models/: __init__.py  filter_options.py  list_response.py  movie.py  quote.py
lotr_sdk/resources/: __init__.py  movies.py  quotes.py
tests/: conftest.py
tests/fixtures/: movie_quotes.json  movie_single.json  quote_single.json  quotes_list.json
tests/integration/: test_integration.py
tests/unit/: conftest.py  test_cache.py  test_client.py  test_filter_options.py  test_movies.py  test_quotes.py
