[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# ASSUMPTION: assignment requires repo name "{your name} SDK".
# Update this distribution name before submission.
name = "rudra-lotr-sdk"
version = "0.1.0"
description = "Python SDK for The One API (Lord of the Rings)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# python-dotenv is optional — callers who load .env themselves do not need it.
dotenv = ["python-dotenv>=1.0.0"]
dev = [
    "pytest>=7.4.0",
    "responses>=0.25.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["lotr_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: requires live API access and LOTR_API_KEY env var (skipped without --integration flag)",
]

[tool.coverage.run]
source = ["lotr_sdk"]
omit = ["tests/*", "demo.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
