[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rudra-sdk"
version = "0.1.0"
description = "Python SDK for The One API (Lord of the Rings)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Rudrasen", email = "rudrasen@7levelstudios.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.urls]
Repository = "https://github.com/rudrasen/rudra-sdk"
Issues = "https://github.com/rudrasen/rudra-sdk/issues"

[project.optional-dependencies]
# python-dotenv is optional — callers who load .env themselves do not need it.
dotenv = ["python-dotenv>=1.0.0"]
dev = [
    "pytest>=7.4.0",
    "responses>=0.25.0,<1.0.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["lotr_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: requires live API access and LOTR_API_KEY env var (skipped without --integration flag)",
]

[tool.coverage.run]
source = ["lotr_sdk"]
omit = ["tests/*", "demo.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
